# gpu-display

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  init.sh
src/: cpu_temp_sensor.cc  cpu_temp_sensor.h  gpu_light_controller.cc  gpu_light_controller.h  main.cc  main.cpp  temp_filter.cc  temp_filter.h  types.h
